# fantastic-octo-disco

./: .gitignore  Cargo.toml  Dockerfile  README.md  benchmark.yaml  grafana.yaml  manifest.yaml
.github/workflows/: build-push.yaml  infrastructure_apply.yaml
api/: Cargo.toml  Dockerfile
api/src/: api.rs  main.rs
firehose/: Cargo.toml  Dockerfile  manifest.yaml
firehose/src/: main.rs
src/: api.rs  main.rs
tf/: argocd-values.yml  argocd.tf  blocky.tf
