[package]
name = "blocky"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utoipa = { version = "5.0.0-alpha.1", features = ["actix_extras"] }
actix-web = "4.8"
anyhow = "1.0.86"
env_logger = "0.11.5"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
utoipa-scalar = { version = "0.2.0-alpha.0", features = ["actix-web"] }
reqwest = { version = "0.12", features = ["json"] }
chrono = "0.4.38"
uuid = { version = "1.10.0", features = ["v4"] }

prometheus = "0.13"
lazy_static = "1.5"
tokio = "1.39"
rand = "0.8"
backon = "0.4"
redis = "0.23"
async-trait = "0.1"
