[package]
name = "firehose"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.12.7"
tokio = { version="1.39", features = ["full"] }
actix-web = "4.8"

prometheus = "0.13"
lazy_static = "1.5"
anyhow = "1.0.86"
chrono = "0.4.38"
